--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,11 +4,7 @@
     <title>eShopping Login</title>
   </head>
   <body>
-    <ul>
-      <% if(messages.error) { %>
-        <li><%= messages.error %></li>
-      <% } %>
-    </ul>
+    <h1>Login</h1>
     <form action="/login" method="post">
       <div id="email">
         <label for="email">Email:</label>
