create dashboard view, add columns to tables, create tables for shopping logic

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
     <title>eShopping Homepage</title>
   </head>
   <body>
-    <h1 id="header">Welcome to the eShopping Homepage</h1>
+    <h1 id="header">Welcome to eShopping</h1>
     <p id="greeting-prompt">What would you like to do?</p>
     <button id="login-button" onclick="window.location.href='/login';">
       Login
