--- a/views/register.ejs
+++ b/views/register.ejs
@@ -5,6 +5,11 @@
   </head>
   <body>
     <h1>Register</h1>
+    <ul>
+      <% if (messages.failure_msg) { %>
+        <li><%= messages.failure_msg %></li>
+      <% } %>
+    </ul>
     <form action="/register" method="post">
       <div id="first_name">
         <label for="first_name">First Name:</label>
