add dashboard and logout buttons to /shop, add logic to delete empty carts on logout

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -9,7 +9,7 @@
     <button id="shop-button" onclick="window.location.href='/users/<%= user.id %>/shop';">
       Shop
     </button>
-    <button id="logout-button" onclick="window.location.href='/logout';">
+    <button id="logout-button" onclick="window.location.href='/users/<%= user.id %>/logout';">
       Logout
     </button>
   </body>
