--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -8,11 +8,14 @@
     <button id="shop-button" onclick="window.location.href='/users/<%= user.id %>/dashboard';">
       Dashboard
     </button>
+    <button id="cart-button" onclick="window.location.href='/users/<%= user.id %>/cart';">
+      Cart
+    </button>
     <button id="logout-button" onclick="window.location.href='/users/<%= user.id %>/logout';">
       Logout
     </button>
     <ul>
-      <% productList.forEach(product => { %>
+      <% product_list.forEach(product => { %>
         <li>
           <%= product.name %>
           </br>
