--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -5,9 +5,17 @@
   </head>
   <body>
     <h1 id="header">Welcome, <%= user.first_name.charAt(0).toUpperCase() + user.first_name.slice(1) %></h1>
+    <ul>
+      <% if (messages.orders_products_added) { %>
+        <li><%= messages.orders_products_added %></li>
+      <% } %>
+    </ul>
     <p id="greeting-prompt">What would you like to do?</p>
     <button id="shop-button" onclick="window.location.href='/users/<%= user.id %>/shop';">
       Shop
+    </button>
+    <button id="cart-button" onclick="window.location.href='/users/<%= user.id %>/cart';">
+      Cart
     </button>
     <button id="logout-button" onclick="window.location.href='/users/<%= user.id %>/logout';">
       Logout
