create orders view

--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -11,6 +11,9 @@
     <button id="shop-button" onclick="window.location.href='/users/<%= user.id %>/shop';">
       Shop
     </button>
+    <button id="orders-button" onclick="window.location.href='/users/<%= user.id %>/orders';">
+      Orders
+    </button>
     <button id="logout-button" onclick="window.location.href='/users/<%= user.id %>/logout';">
       Logout
     </button>
