--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -17,6 +17,9 @@
     <button id="cart-button" onclick="window.location.href='/users/<%= user.id %>/cart';">
       Cart
     </button>
+    <button id="orders-button" onclick="window.location.href='/users/<%= user.id %>/orders';">
+      Orders
+    </button>
     <button id="logout-button" onclick="window.location.href='/users/<%= user.id %>/logout';">
       Logout
     </button>
