--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -38,6 +38,7 @@
           </li>
         <% }); %>
       </ul>
+      <h3>Total: <%= total %></h3>
       <form action="/users/<%= user.id %>/cart/<%= cart_id %>/checkout" method="post">
         <button type="submit">Checkout</button>
       </form>
