--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -37,7 +37,7 @@
             </li>
           <% }); %>
           <h3>Total: 
-            $<%= filtered_order_products.reduce((acc, {total}) => acc + parseFloat(total.slice(1)), 0).toFixed(2); %>
+            $<%= filtered_order_products.reduce((acc, {total}) => acc + parseFloat(total.replace(/[^0-9.-]+/g,"")), 0).toFixed(2).toString().replace(/\B(?<!\.\d*)(?=(\d{3})+(?!\d))/g, ","); %>
           </h3>
           <form action="/orders/<%= order.id %>" method="post">
             <input type="hidden" name="_method" value="DELETE">
