--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,20 +2,33 @@
 <html>
   <head>
     <title>eShopping Homepage</title>
+    <link rel="stylesheet" type="text/css" href="/css/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fanwood+Text:ital@0;1&family=Shrikhand&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1 id="header">Welcome to eShopping</h1>
-    <ul>
+    <header>
+      <img id="logo-header" src="/images/shopping-cart-shadow.png">
+      <h1 id="header-title"><span class="e">e</span>Shopping</h1>
+    </header>
+    <main>
+      <h1 id="greeting">Welcome to <span class="eshopping"><span class="e">e</span>Shopping</span></h1>
+      <img id="logo-body" src="/images/shopping-cart-large-shadow.png">
       <% if (messages.logout_msg) { %>
-        <li><%= messages.logout_msg %></li>
+        <ul class="messages">
+          <li><%= messages.logout_msg %></li>
+        </ul>
       <% } %>
-    </ul>
-    <p id="greeting-prompt">What would you like to do?</p>
-    <button id="login-button" onclick="window.location.href='/login';">
-      Login
-    </button>
-    <button id="register-button" onclick="window.location.href='/register';">
-      Register
-    </button>
+      <p id="greeting-prompt">What would you like to do?</p>
+      <div class="buttons">
+        <button id="login-button" onclick="window.location.href='/login';">
+          Login
+        </button>
+        <button id="register-button" onclick="window.location.href='/register';">
+          Register
+        </button>
+      </div>
+    </main>
   </body>
 </html>
