--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -2,37 +2,61 @@
 <html>
   <head>
     <title>eShopping Dashboard</title>
+    <link rel="stylesheet" type="text/css" href="/css/shop.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fanwood+Text:ital@0;1&family=Shrikhand&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1 id="header">eShopping Shop</h1>
-    <button id="shop-button" onclick="window.location.href='/users/<%= user.id %>/dashboard';">
-      Dashboard
-    </button>
-    <button id="cart-button" onclick="window.location.href='/users/<%= user.id %>/cart';">
-      Cart
-    </button>
-    <button id="orders-button" onclick="window.location.href='/users/<%= user.id %>/orders';">
-      Orders
-    </button>
-    <button id="logout-button" onclick="window.location.href='/users/<%= user.id %>/logout';">
-      Logout
-    </button>
-    <ul>
-      <% product_list.forEach(product => { %>
-        <li>
-          <%= product.name %>
-          </br>
-          <%= product.price %>
-          </br>
-          <%= product.description %>
-          </br>
-          <form action="/users/<%= user.id %>/cart/<%= cart_id %>/products?product_id=<%= product.id %>" method="post">
-            <label for="quantity">Quantity:</label>
-            <input type="number" id="quantity" name="quantity" min="1" max="1000">
-            <button type="submit">Add To Cart</button>
-          </form>
-        </li>
-      <% }); %>
-    </ul>
+    <header>
+      <img id="logo-header" src="/images/shopping-cart-shadow.png">
+      <h1 id="header-title"><span class="e">e</span>Shopping</h1>
+    </header>
+    <main>
+      <h1 id="shop">eShopping Shop</h1>
+      <div class="buttons">
+        <button id="shop-button" onclick="window.location.href='/users/<%= user.id %>/dashboard';">
+          Dashboard
+        </button>
+        <button id="cart-button" onclick="window.location.href='/users/<%= user.id %>/cart';">
+          Cart
+        </button>
+        <button id="orders-button" onclick="window.location.href='/users/<%= user.id %>/orders';">
+          Orders
+        </button>
+        <button id="logout-button" onclick="window.location.href='/users/<%= user.id %>/logout';">
+          Logout
+        </button>
+      </div>
+      <% if (messages.added_to_cart) { %>
+        <ul class="messages">
+          <li><%= messages.added_to_cart %></li>
+        </ul>
+      <% } %>
+      <% if (messages.updated_in_cart) { %>
+        <ul class="messages">
+          <li><%= messages.updated_in_cart %></li>
+        </ul>
+      <% } %>
+      <ul class="product-list">
+        <% product_list.forEach(product => { %>
+          <li>
+            <b><%= product.name %></b>
+            </br>
+            <%= product.price %>
+            </br>
+            <%= product.description %>
+            </br>
+            <form action="/users/<%= user.id %>/cart/<%= cart_id %>/products?product_id=<%= product.id %>" method="post">
+              <label for="quantity">Quantity:</label>
+              <input type="number" id="quantity" name="quantity" min="1" max="1000">
+              </br>
+              <button class="add-to-cart" type="submit">Add To Cart</button>
+            </form>
+            </br>
+          </li>
+        <% }); %>
+      </ul>
+    </main>
   </body>
 </html>
