change shop.ejs title to correct title

--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>eShopping Dashboard</title>
+    <title>eShopping Shop</title>
     <link rel="stylesheet" type="text/css" href="/css/shop.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
