add html meta tags and img alt attributes to improve accessibility and SEO

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>eShopping Dashboard</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1"><meta name="description" content="User dashboard, the landing page that a user sees once they login where they can navigate to other pages such as the eShopping shop, their cart or their orders.">
     <link rel="stylesheet" type="text/css" href="/css/dashboard.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -9,7 +10,7 @@
   </head>
   <body>
     <header>
-      <img id="logo-header" src="/images/shopping-cart-shadow.png">
+      <img id="logo-header" src="/images/shopping-cart-shadow.png" alt="logo">
       <h1 id="header-title"><span class="e">e</span>Shopping</h1>
     </header>
     <main>
