--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>eShopping Login</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="User login page, where a user can login to their eShopping account.">
     <link rel="stylesheet" type="text/css" href="/css/login.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -9,7 +11,7 @@
   </head>
   <body>
     <header>
-      <img id="logo-header" src="/images/shopping-cart-shadow.png">
+      <img id="logo-header" src="/images/shopping-cart-shadow.png" alt="logo">
       <h1 id="header-title"><span class="e">e</span>Shopping</h1>
     </header>
     <main>
