--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>eShopping Homepage</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Homepage for eShopping, a simple eCommerce app.">
     <link rel="stylesheet" type="text/css" href="/css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -9,12 +11,12 @@
   </head>
   <body>
     <header>
-      <img id="logo-header" src="/images/shopping-cart-shadow.png">
+      <img id="logo-header" src="/images/shopping-cart-shadow.png" alt="logo">
       <h1 id="header-title"><span class="e">e</span>Shopping</h1>
     </header>
     <main>
       <h1 id="greeting">Welcome to <span class="eshopping"><span class="e">e</span>Shopping</span></h1>
-      <img id="logo-body" src="/images/shopping-cart-large-shadow.png">
+      <img id="logo-body" src="/images/shopping-cart-large-shadow.png" alt="logo">
       <% if (messages.logout_msg) { %>
         <ul class="messages">
           <li><%= messages.logout_msg %></li>
