--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <title>eShopping Dashboard</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1"><meta name="description" content="User dashboard, the landing page that a user sees once they login where they can navigate to other pages such as the eShopping shop, their cart or their orders.">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="User dashboard, the landing page that a user sees once they login where they can navigate to other pages such as the eShopping shop, their cart or their orders.">
     <link rel="stylesheet" type="text/css" href="/css/dashboard.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
